<resources>
    <string name="app_name"> دیکشنری من</string>
    <string name="search">جستجو</string>
    <string name="quiz">آزمون</string>
    <string name="add">افزودن لغت</string>
    <string name="word">لغت</string>
    <string name="definition">معنی</string>
    <string name="no">بازگشت</string>
    <string name="clear">پاک کردن</string>
    <string name="yes">افزودن</string>
    <string name="edit">ویرایش</string>
    <string name="delete">حذف</string>
    <string name="search_hint">کلمه مورد نظر خود را بنویسید</string>
    <string name="score">score:</string>
    <string name="remain_time">timer:</string>
</resources>
